--- a/yotube_subscriber_count.html
+++ b/yotube_subscriber_count.html
@@ -358,6 +358,25 @@
             border: none;
             padding: 8px;
             border-radius: 5px;
+            width: 100%;
+            box-sizing: border-box;
+            margin-bottom: 10px;
+        }
+        .customize-panel .input-group-custom {
+            display: flex;
+            align-items: center;
+            margin-bottom: 10px;
+        }
+
+        .customize-panel .input-group-custom label {
+            flex-basis: 40%;
+            text-align: left;
+            padding-right: 10px;
+        }
+
+        .customize-panel .input-group-custom input[type="number"] {
+            flex-grow: 1;
+            width: auto;
         }
         /* Search Results */
         .search-results-container {
@@ -428,14 +447,16 @@
         <div class="customize-section">
             <button class="customize-button" id="customizeButton">Customize</button>
             <div class="customize-panel" id="customizePanel">
-                <label for="updateInterval">Update Interval (seconds):</label>
-                <input type="number" id="updateInterval" value="5" min="1">
+                <div class="input-group-custom">
+                    <label for="updateInterval">Update Interval (seconds):</label>
+                    <input type="number" id="updateInterval" value="10" min="1">
+                </div>
             </div>
         </div>
     </div>
 
     <script>
-        let API_KEY = 'AIzaSyD98Oh_cT9oP04I_cN_7Jcy1571Tbp79VU';
+        let API_KEY = 'AIzaSyDFKbTcxnd_YQvns6DiETNNzS0mNK6gzC4';
         let estimatedCount = 0;
         let subChart;
         let subData = [];
@@ -470,7 +491,7 @@
             try {
                 // Check if it's MrBeast's main channel
                 if (channelId === mrBeastChannelId) {
-                    const viewstatsData = await fetchViewstatsData(mrBeastChannelId);
+                    const viewstatsData = await fetchViewstatsData(UCX6OQ3DkcsbYNE6H8uQQuVA);
                     if (viewstatsData) {
                         return viewstatsData;
                     }
@@ -499,7 +520,7 @@
 
         async function fetchViewstatsData(channelId) {
             try {
-                const response = await fetch(`https://viewstats.net/api/youtube/channel/${channelId}`);
+                const response = await fetch(`https://viewstats.com/api/youtube/channel/${UCX6OQ3DkcsbYNE6H8uQQuVA}`);
                 const data = await response.json();
 
                 if (data.success && data.data) {
@@ -544,43 +565,47 @@
         }
 
         async function searchChannels(searchTerm) {
-            const searchResultsContainer = $("#searchResults");
-            const searchResultsList = $("#searchResultsList");
-            searchResultsList.empty();
-            searchResultsContainer.hide();
+    const searchResultsContainer = $("#searchResults");
+    const searchResultsList = $("#searchResultsList");
+    searchResultsList.empty();
+    searchResultsContainer.hide();
 
-            try {
-                const response = await fetch(
-                    `https://www.googleapis.com/youtube/v3/search?part=snippet&q=${encodeURIComponent(searchTerm)}&type=channel&key=${API_KEY}`
-                );
-                const data = await response.json();
+    try {
+        const response = await fetch(
+            `https://www.googleapis.com/youtube/v3/search?part=snippet&q=${encodeURIComponent(searchTerm)}&type=channel&key=${API_KEY}`
+        );
 
-                if (data.items.length > 0) {
-                    data.items.forEach(item => {
-                        const channelName = item.snippet.title;
-                        const channelId = item.id.channelId;
-                        const channelLogo = item.snippet.thumbnails.default.url;
-                        const listItem = $(`<li><img src="${channelLogo}" alt="${channelName} Logo">${channelName}</li>`);
-                        listItem.click(() => {
-                            getChannelDetails(channelId).then(channelData => {
-                                updateChannelStats(channelData);
-                                searchResultsContainer.hide();
-                            });
-                        });
-                        searchResultsList.append(listItem);
-                    });
-                    searchResultsContainer.show();
-                } else {
-                    searchResultsList.append($("<li>No channels found.</li>"));
-                    searchResultsContainer.show();
-                }
-            } catch (error) {
-                console.error("Search Error:", error);
-                searchResultsList.append($("<li>Search failed.</li>"));
-                searchResultsContainer.show();
-            }
+        if (!response.ok) {
+            throw new Error(`HTTP error! status: ${response.status}`);
         }
 
+        const data = await response.json();
+
+        if (data.items.length > 0) {
+            data.items.forEach(item => {
+                const channelName = item.snippet.title;
+                const channelId = item.id.channelId;
+                const channelLogo = item.snippet.thumbnails.default.url;
+                const listItem = $(`<li><img src="${channelLogo}" alt="${channelName} Logo">${channelName}</li>`);
+                listItem.click(() => {
+                    getChannelDetails(channelId).then(channelData => {
+                        updateChannelStats(channelData);
+                        searchResultsContainer.hide();
+                    });
+                });
+                searchResultsList.append(listItem);
+            });
+            searchResultsContainer.show();
+        } else {
+            searchResultsList.append($("<li>No channels found.</li>"));
+            searchResultsContainer.show();
+        }
+    } catch (error) {
+        console.error("Search Error:", error);
+        searchResultsList.append($("<li>Search failed.</li>"));
+        searchResultsContainer.show();
+    }
+}
         $("#searchButton").click(() => {
             const searchTerm = $("#channelSearch").val().trim();
             if (searchTerm) {
@@ -748,9 +773,136 @@
         }
 
         function getRandomGrowthRate() {
-            return Math.random() < 0.9 ? Math.floor(Math.random() * 13) : -Math.floor(Math.random() * 3);
-        }
+            const now = new Date();
+            const currentHour = now.getHours();
+            const channelCountryCode = currentChannelData ? currentChannelData.countryCode : 'US'; // Default to US if country code is not available
+            let baseGrowthRate = Math.random() < 0.9 ? Math.floor(Math.random() * 13) : -Math.floor(Math.random() * 3); // Base growth rate
 
+            // Adjust growth rate based on time of day and country
+            if (channelCountryCode === 'IN') { // India
+                if (currentHour >= 23 || currentHour < 6) { // Night time in India (11 PM - 6 AM)
+                    baseGrowthRate = Math.random() < 0.8 ? Math.floor(Math.random() * 3) : -Math.floor(Math.random() * 5); // Slower growth or loss
+                } else if (currentHour >= 6 && currentHour < 10) { // Morning in India (6 AM - 10 AM)
+                    baseGrowthRate = Math.random() < 0.9 ? Math.floor(Math.random() * 10) : -Math.floor(Math.random() * 2); // Moderate growth
+                } else if (currentHour >= 10 && currentHour < 18) { // Day time in India (10 AM - 6 PM)
+                    baseGrowthRate = Math.random() < 0.9 ? Math.floor(Math.random() * 13) : -Math.floor(Math.random() * 1); // High growth
+                } else { // Evening in India (6 PM - 11 PM)
+                    baseGrowthRate = Math.random() < 0.9 ? Math.floor(Math.random() * 8) : -Math.floor(Math.random() * 2); // Moderate growth
+                }
+            } else if (channelCountryCode === 'US') { // United States
+                if (currentHour >= 23 || currentHour < 6) { // Night time in US (11 PM - 6 AM)
+                    baseGrowthRate = Math.random() < 0.8 ? Math.floor(Math.random() * 3) : -Math.floor(Math.random() * 5); // Slower growth or loss
+                } else if (currentHour >= 6 && currentHour < 10) { // Morning in US (6 AM - 10 AM)
+                    baseGrowthRate = Math.random() < 0.9 ? Math.floor(Math.random() * 10) : -Math.floor(Math.random() * 2); // Moderate growth
+                } else if (currentHour >= 10 && currentHour < 18) { // Day time in US (10 AM - 6 PM)
+                    baseGrowthRate = Math.random() < 0.9 ? Math.floor(Math.random() * 13) : -Math.floor(Math.random() * 1); // High growth
+                } else { // Evening in US (6 PM - 11 PM)
+                    baseGrowthRate = Math.random() < 0.9 ? Math.floor(Math.random() * 8) : -Math.floor(Math.random() * 2); // Moderate growth
+                }
+            } else if (channelCountryCode === 'KR') { // South Korea
+                if (currentHour >= 23 || currentHour < 6) { // Night time in South Korea (11 PM - 6 AM)
+                    baseGrowthRate = Math.random() < 0.8 ? Math.floor(Math.random() * 3) : -Math.floor(Math.random() * 5); // Slower growth or loss
+                } else if (currentHour >= 6 && currentHour < 10) { // Morning in South Korea (6 AM - 10 AM)
+                    baseGrowthRate = Math.random() < 0.9 ? Math.floor(Math.random() * 10) : -Math.floor(Math.random() * 2); // Moderate growth
+                } else if (currentHour >= 10 && currentHour < 18) { // Day time in South Korea (10 AM - 6 PM)
+                    baseGrowthRate = Math.random() < 0.9 ? Math.floor(Math.random() * 13) : -Math.floor(Math.random() * 1); // High growth
+                } else { // Evening in South Korea (6 PM - 11 PM)
+                    baseGrowthRate = Math.random() < 0.9 ? Math.floor(Math.random() * 8) : -Math.floor(Math.random() * 2); // Moderate growth
+                }
+            } else if (channelCountryCode === 'JP') { // Japan
+                if (currentHour >= 23 || currentHour < 6) { // Night time in Japan (11 PM - 6 AM)
+                    baseGrowthRate = Math.random() < 0.8 ? Math.floor(Math.random() * 3) : -Math.floor(Math.random() * 5); // Slower growth or loss
+                } else if (currentHour >= 6 && currentHour < 10) { // Morning in Japan (6 AM - 10 AM)
+                    baseGrowthRate = Math.random() < 0.9 ? Math.floor(Math.random() * 10) : -Math.floor(Math.random() * 2); // Moderate growth
+                } else if (currentHour >= 10 && currentHour < 18) { // Day time in Japan (10 AM - 6 PM)
+                    baseGrowthRate = Math.random() < 0.9 ? Math.floor(Math.random() * 13) : -Math.floor(Math.random() * 1); // High growth
+                } else { // Evening in Japan (6 PM - 11 PM)
+                    baseGrowthRate = Math.random() < 0.9 ? Math.floor(Math.random() * 8) : -Math.floor(Math.random() * 2); // Moderate growth
+                }
+            } else if (channelCountryCode === 'BR') { // Brazil
+                if (currentHour >= 23 || currentHour < 6) { // Night time in Brazil (11 PM - 6 AM)
+                    baseGrowthRate = Math.random() < 0.8 ? Math.floor(Math.random() * 3) : -Math.floor(Math.random() * 5); // Slower growth or loss
+                } else if (currentHour >= 6 && currentHour < 10) { // Morning in Brazil (6 AM - 10 AM)
+                    baseGrowthRate = Math.random() < 0.9 ? Math.floor(Math.random() * 10) : -Math.floor(Math.random() * 2); // Moderate growth
+                } else if (currentHour >= 10 && currentHour < 18) { // Day time in Brazil (10 AM - 6 PM)
+                    baseGrowthRate = Math.random() < 0.9 ? Math.floor(Math.random() * 13) : -Math.floor(Math.random() * 1); // High growth
+                } else { // Evening in Brazil (6 PM - 11 PM)
+                    baseGrowthRate = Math.random() < 0.9 ? Math.floor(Math.random() * 8) : -Math.floor(Math.random() * 2); // Moderate growth
+                }
+            } else if (channelCountryCode === 'PT') { // Portugal
+                if (currentHour >= 23 || currentHour < 6) { // Night time in Portugal (11 PM - 6 AM)
+                    baseGrowthRate = Math.random() < 0.8 ? Math.floor(Math.random() * 3) : -Math.floor(Math.random() * 5); // Slower growth or loss
+                } else if (currentHour >= 6 && currentHour < 10) { // Morning in Portugal (6 AM - 10 AM)
+                    baseGrowthRate = Math.random() < 0.9 ? Math.floor(Math.random() * 10) : -Math.floor(Math.random() * 2); // Moderate growth
+                } else if (currentHour >= 10 && currentHour < 18) { // Day time in Portugal (10 AM - 6 PM)
+                    baseGrowthRate = Math.random() < 0.9 ? Math.floor(Math.random() * 13) : -Math.floor(Math.random() * 1); // High growth
+                } else { // Evening in Portugal (6 PM - 11 PM)
+                    baseGrowthRate = Math.random() < 0.9 ? Math.floor(Math.random() * 8) : -Math.floor(Math.random() * 2); // Moderate growth
+                }
+            } else if (channelCountryCode === 'MX') { // Mexico
+                if (currentHour >= 23 || currentHour < 6) { // Night time in Mexico (11 PM - 6 AM)
+                    baseGrowthRate = Math.random() < 0.8 ? Math.floor(Math.random() * 3) : -Math.floor(Math.random() * 5); // Slower growth or loss
+                } else if (currentHour >= 6 && currentHour < 10) { // Morning in Mexico (6 AM - 10 AM)
+                    baseGrowthRate = Math.random() < 0.9 ? Math.floor(Math.random() * 10) : -Math.floor(Math.random() * 2); // Moderate growth
+                } else if (currentHour >= 10 && currentHour < 18) { // Day time in Mexico (10 AM - 6 PM)
+                    baseGrowthRate = Math.random() < 0.9 ? Math.floor(Math.random() * 13) : -Math.floor(Math.random() * 1); // High growth
+                } else { // Evening in Mexico (6 PM - 11 PM)
+                    baseGrowthRate = Math.random() < 0.9 ? Math.floor(Math.random() * 8) : -Math.floor(Math.random() * 2); // Moderate growth
+                }
+            } else if (channelCountryCode === 'AR') { // Argentina
+                if (currentHour >= 23 || currentHour < 6) { // Night time in Argentina (11 PM - 6 AM)
+                    baseGrowthRate = Math.random() < 0.8 ? Math.floor(Math.random() * 3) : -Math.floor(Math.random() * 5); // Slower growth or loss
+                } else if (currentHour >= 6 && currentHour < 10) { // Morning in Argentina (6 AM - 10 AM)
+                    baseGrowthRate = Math.random() < 0.9 ? Math.floor(Math.random() * 10) : -Math.floor(Math.random() * 2); // Moderate growth
+                } else if (currentHour >= 10 && currentHour < 18) { // Day time in Argentina (10 AM - 6 PM)
+                    baseGrowthRate = Math.random() < 0.9 ? Math.floor(Math.random() * 13) : -Math.floor(Math.random() * 1); // High growth
+                } else { // Evening in Argentina (6 PM - 11 PM)
+                    baseGrowthRate = Math.random() < 0.9 ? Math.floor(Math.random() * 8) : -Math.floor(Math.random() * 2); // Moderate growth
+                }
+            } else if (channelCountryCode === 'AE') { // United Arab Emirates
+                if (currentHour >= 23 || currentHour < 6) { // Night time in United Arab Emirates (11 PM - 6 AM)
+                    baseGrowthRate = Math.random() < 0.8 ? Math.floor(Math.random() * 3) : -Math.floor(Math.random() * 5); // Slower growth or loss
+                } else if (currentHour >= 6 && currentHour < 10) { // Morning in United Arab Emirates (6 AM - 10 AM)
+                    baseGrowthRate = Math.random() < 0.9 ? Math.floor(Math.random() * 10) : -Math.floor(Math.random() * 2); // Moderate growth
+                } else if (currentHour >= 10 && currentHour < 18) { // Day time in United Arab Emirates (10 AM - 6 PM)
+                    baseGrowthRate = Math.random() < 0.9 ? Math.floor(Math.random() * 13) : -Math.floor(Math.random() * 1); // High growth
+                } else { // Evening in United Arab Emirates (6 PM - 11 PM)
+                    baseGrowthRate = Math.random() < 0.9 ? Math.floor(Math.random() * 8) : -Math.floor(Math.random() * 2); // Moderate growth
+                }
+            } else if (channelCountryCode === 'CA') { // Canada
+                if (currentHour >= 23 || currentHour < 6) { // Night time in Canada (11 PM - 6 AM)
+                    baseGrowthRate = Math.random() < 0.8 ? Math.floor(Math.random() * 3) : -Math.floor(Math.random() * 5); // Slower growth or loss
+                } else if (currentHour >= 6 && currentHour < 10) { // Morning in Canada (6 AM - 10 AM)
+                    baseGrowthRate = Math.random() < 0.9 ? Math.floor(Math.random() * 10) : -Math.floor(Math.random() * 2); // Moderate growth
+                } else if (currentHour >= 10 && currentHour < 18) { // Day time in Canada (10 AM - 6 PM)
+                    baseGrowthRate = Math.random() < 0.9 ? Math.floor(Math.random() * 13) : -Math.floor(Math.random() * 1); // High growth
+                } else { // Evening in Canada (6 PM - 11 PM)
+                    baseGrowthRate = Math.random() < 0.9 ? Math.floor(Math.random() * 8) : -Math.floor(Math.random() * 2); // Moderate growth
+                }
+            } else if (channelCountryCode === 'PK') { // Pakistan
+                if (currentHour >= 23 || currentHour < 6) { // Night time in Pakistan (11 PM - 6 AM)
+                    baseGrowthRate = Math.random() < 0.8 ? Math.floor(Math.random() * 3) : -Math.floor(Math.random() * 5); // Slower growth or loss
+                } else if (currentHour >= 6 && currentHour < 10) { // Morning in Pakistan (6 AM - 10 AM)
+                    baseGrowthRate = Math.random() < 0.9 ? Math.floor(Math.random() * 10) : -Math.floor(Math.random() * 2); // Moderate growth
+                } else if (currentHour >= 10 && currentHour < 18) { // Day time in Pakistan (10 AM - 6 PM)
+                    baseGrowthRate = Math.random() < 0.9 ? Math.floor(Math.random() * 13) : -Math.floor(Math.random() * 1); // High growth
+                } else { // Evening in Pakistan (6 PM - 11 PM)
+                    baseGrowthRate = Math.random() < 0.9 ? Math.floor(Math.random() * 8) : -Math.floor(Math.random() * 2); // Moderate growth
+                }
+            } else { // Default to US time zone if country is unknown
+                if (currentHour >= 23 || currentHour < 6) { // Night time (11 PM - 6 AM)
+                    baseGrowthRate = Math.random() < 0.8 ? Math.floor(Math.random() * 3) : -Math.floor(Math.random() * 5); // Slower growth or loss
+                } else if (currentHour >= 6 && currentHour < 10) { // Morning (6 AM - 10 AM)
+                    baseGrowthRate = Math.random() < 0.9 ? Math.floor(Math.random() * 10) : -Math.floor(Math.random() * 2); // Moderate growth
+                } else if (currentHour >= 10 && currentHour < 18) { // Day time (10 AM - 6 PM)
+                    baseGrowthRate = Math.random() < 0.9 ? Math.floor(Math.random() * 13) : -Math.floor(Math.random() * 1); // High growth
+                } else { // Evening (6 PM - 11 PM)
+                    baseGrowthRate = Math.random() < 0.9 ? Math.floor(Math.random() * 8) : -Math.floor(Math.random() * 2); // Moderate growth
+                }
+            }
+
+            return baseGrowthRate;
+        }
         function saveSubscribers() {
             if (!channelId) return;
             localStorage.setItem(`subs_${channelId}`, JSON.stringify({ count: estimatedCount, timestamp: Date.now() }));
